// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonRemoveModal Component Credential offer decline renders correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      Object {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      Object {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#25272A",
            "borderRadius": 16,
            "elevation": 12,
            "flexDirection": "column",
            "maxWidth": 400,
            "padding": 24,
            "paddingBottom": 32,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 4,
              "width": 2,
            },
            "shadowOpacity": 0.48,
            "shadowRadius": 12,
            "width": "95%",
          }
        }
      >
        <
          color="#FF4445"
        />
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": 25,
              "marginTop": 15,
              "textAlign": "center",
            }
          }
        >
          CredentialOffer.DeclineTitle
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "marginBottom": 24,
                "textAlign": "left",
              },
              Object {
                "marginVertical": 30,
              },
            ]
          }
        >
          CredentialOffer.DeclineParagraph1
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 24,
              "textAlign": "left",
            }
          }
        >
          CredentialOffer.DeclineParagraph2
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
              "marginTop": 24,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#FFFFFF",
                "borderRadius": 25,
                "borderWidth": 1.5,
                "flex": 1,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/CancelDeclineButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              CredentialDetails.Back
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FF4445",
                "borderRadius": 25,
                "flex": 2,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/ConfirmDeclineButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              Global.Decline
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CommonRemoveModal Component Custom notification decline renders correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      Object {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      Object {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#25272A",
            "borderRadius": 16,
            "elevation": 12,
            "flexDirection": "column",
            "maxWidth": 400,
            "padding": 24,
            "paddingBottom": 32,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 4,
              "width": 2,
            },
            "shadowOpacity": 0.48,
            "shadowRadius": 12,
            "width": "95%",
          }
        }
      >
        <
          color="#FF4445"
        />
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": 25,
              "marginTop": 15,
              "textAlign": "center",
            }
          }
        >
          CredentialOffer.CustomOfferTitle
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "marginBottom": 24,
                "textAlign": "left",
              },
              Object {
                "marginTop": 30,
              },
            ]
          }
        >
          CredentialOffer.CustomOfferParagraph1
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 24,
              "textAlign": "left",
            }
          }
        >
          CredentialOffer.CustomOfferParagraph2
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
              "marginTop": 24,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#FFFFFF",
                "borderRadius": 25,
                "borderWidth": 1.5,
                "flex": 1,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/CancelButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              CredentialDetails.Back
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FF4445",
                "borderRadius": 25,
                "flex": 2,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/ConfirmButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              Global.Decline
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CommonRemoveModal Component Proof request decline renders correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      Object {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      Object {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#25272A",
            "borderRadius": 16,
            "elevation": 12,
            "flexDirection": "column",
            "maxWidth": 400,
            "padding": 24,
            "paddingBottom": 32,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 4,
              "width": 2,
            },
            "shadowOpacity": 0.48,
            "shadowRadius": 12,
            "width": "95%",
          }
        }
      >
        <
          color="#FF4445"
        />
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": 25,
              "marginTop": 15,
              "textAlign": "center",
            }
          }
        >
          ProofRequest.DeclineTitle
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 24,
              "textAlign": "left",
            }
          }
        >
          ProofRequest.DeclineBulletPoint1
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 24,
              "textAlign": "left",
            }
          }
        >
          ProofRequest.DeclineBulletPoint2
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 24,
              "textAlign": "left",
            }
          }
        >
          ProofRequest.DeclineBulletPoint3
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
              "marginTop": 24,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#FFFFFF",
                "borderRadius": 25,
                "borderWidth": 1.5,
                "flex": 1,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/CancelDeclineButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              CredentialDetails.Back
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FF4445",
                "borderRadius": 25,
                "flex": 2,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/ConfirmDeclineButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              Global.Decline
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CommonRemoveModal Component Remove contact renders correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      Object {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      Object {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#25272A",
            "borderRadius": 16,
            "elevation": 12,
            "flexDirection": "column",
            "maxWidth": 400,
            "padding": 24,
            "paddingBottom": 32,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 4,
              "width": 2,
            },
            "shadowOpacity": 0.48,
            "shadowRadius": 12,
            "width": "95%",
          }
        }
      >
        <
          color="#FF4445"
        />
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": 25,
              "marginTop": 15,
              "textAlign": "center",
            }
          }
        >
          ContactDetails.RemoveTitle
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 24,
              "textAlign": "left",
            }
          }
        >
          ContactDetails.RemoveContactMessageWarning
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "marginBottom": 24,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 16,
              },
            ]
          }
        >
          ContactDetails.RemoveContactMessageTop
        </Text>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 3,
                "height": 6,
                "marginRight": 12,
                "marginTop": 8,
                "width": 6,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "flex": 1,
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            ContactDetails.RemoveContactsBulletPoint1
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 3,
                "height": 6,
                "marginRight": 12,
                "marginTop": 8,
                "width": 6,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "flex": 1,
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            ContactDetails.RemoveContactsBulletPoint2
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 3,
                "height": 6,
                "marginRight": 12,
                "marginTop": 8,
                "width": 6,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "flex": 1,
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            ContactDetails.RemoveContactsBulletPoint3
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 3,
                "height": 6,
                "marginRight": 12,
                "marginTop": 8,
                "width": 6,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "flex": 1,
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            ContactDetails.RemoveContactsBulletPoint4
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "marginBottom": 24,
                "textAlign": "left",
              },
              Object {
                "marginTop": 16,
              },
            ]
          }
        >
          ContactDetails.RemoveContactMessageBottom
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
              "marginTop": 24,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#FFFFFF",
                "borderRadius": 25,
                "borderWidth": 1.5,
                "flex": 1,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/CancelRemoveButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              CredentialDetails.Back
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FF4445",
                "borderRadius": 25,
                "flex": 2,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/ConfirmRemoveButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              ContactDetails.RemoveContactAction
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CommonRemoveModal Component Remove contact renders correctly2 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      Object {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      Object {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#25272A",
            "borderRadius": 16,
            "elevation": 12,
            "flexDirection": "column",
            "maxWidth": 400,
            "padding": 24,
            "paddingBottom": 32,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 4,
              "width": 2,
            },
            "shadowOpacity": 0.48,
            "shadowRadius": 12,
            "width": "95%",
          }
        }
      >
        <
          color="#FF4445"
        />
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": 25,
              "marginTop": 15,
              "textAlign": "center",
            }
          }
        >
          ContactDetails.UnableToRemoveTitle
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 24,
              "textAlign": "left",
            }
          }
        >
          ContactDetails.UnableToRemoveCaption
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
              "marginTop": 24,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#FFFFFF",
                "borderRadius": 25,
                "borderWidth": 1.5,
                "flex": 1,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/AbortGoToCredentialsButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              CredentialDetails.Back
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FF4445",
                "borderRadius": 25,
                "flex": 2,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/GoToCredentialsButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              ContactDetails.GoToCredentials
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CommonRemoveModal Component Remove credential renders correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      Object {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      Object {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#25272A",
            "borderRadius": 16,
            "elevation": 12,
            "flexDirection": "column",
            "maxWidth": 400,
            "padding": 24,
            "paddingBottom": 32,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 4,
              "width": 2,
            },
            "shadowOpacity": 0.48,
            "shadowRadius": 12,
            "width": "95%",
          }
        }
      >
        <
          color="#FF4445"
        />
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": 25,
              "marginTop": 15,
              "textAlign": "center",
            }
          }
        >
          CredentialDetails.RemoveTitle
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 24,
              "textAlign": "left",
            }
          }
        >
          CredentialDetails.RemoveCaption
        </Text>
        <View
          style={
            Object {
              "marginTop": 25,
            }
          }
        >
          <View
            accessibilityLabel="CredentialDetails.YouWillNotLose"
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#313132",
                "borderRadius": 5,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "opacity": 1,
                "padding": 15,
              }
            }
            testID="com.ariesbifold:id/CredentialDetails.YouWillNotLose"
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              CredentialDetails.YouWillNotLose
            </Text>
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            collapsable={false}
            pointerEvents="auto"
            style={
              Object {
                "height": 0,
                "overflow": "hidden",
              }
            }
          >
            <View
              collapsable={false}
              onLayout={[Function]}
              style={Object {}}
            >
              <View
                style={
                  Object {
                    "borderLeftColor": "#313132",
                    "borderLeftWidth": 2,
                    "marginTop": 10,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 5,
                    }
                  }
                >
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "paddingLeft": 5,
                        },
                      ]
                    }
                  >
                    •
                  </Text>
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "flex": 1,
                          "paddingLeft": 5,
                        },
                      ]
                    }
                  >
                    CredentialDetails.YouWillNotLoseListItem1
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 5,
                    }
                  }
                >
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "paddingLeft": 5,
                        },
                      ]
                    }
                  >
                    •
                  </Text>
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "flex": 1,
                          "paddingLeft": 5,
                        },
                      ]
                    }
                  >
                    CredentialDetails.YouWillNotLoseListItem2
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginTop": 25,
            }
          }
        >
          <View
            accessibilityLabel="CredentialDetails.HowToGetThisCredentialBack"
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#313132",
                "borderRadius": 5,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "opacity": 1,
                "padding": 15,
              }
            }
            testID="com.ariesbifold:id/CredentialDetails.HowToGetThisCredentialBack"
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              CredentialDetails.HowToGetThisCredentialBack
            </Text>
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            collapsable={false}
            pointerEvents="auto"
            style={
              Object {
                "height": 0,
                "overflow": "hidden",
              }
            }
          >
            <View
              collapsable={false}
              onLayout={[Function]}
              style={Object {}}
            >
              <View
                style={
                  Object {
                    "borderLeftColor": "#313132",
                    "borderLeftWidth": 2,
                    "marginTop": 10,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 5,
                    }
                  }
                >
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "paddingLeft": 5,
                        },
                      ]
                    }
                  >
                    •
                  </Text>
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "flex": 1,
                          "paddingLeft": 5,
                        },
                      ]
                    }
                  >
                    CredentialDetails.HowToGetThisCredentialBackListItem1
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
              "marginTop": 24,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#FFFFFF",
                "borderRadius": 25,
                "borderWidth": 1.5,
                "flex": 1,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/CancelRemoveButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              CredentialDetails.Back
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FF4445",
                "borderRadius": 25,
                "flex": 2,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/ConfirmRemoveButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              CredentialDetails.RemoveCredentialAction
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CommonRemoveModal Component Rerenders correctly when not visible 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      Object {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      Object {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#25272A",
            "borderRadius": 16,
            "elevation": 12,
            "flexDirection": "column",
            "maxWidth": 400,
            "padding": 24,
            "paddingBottom": 32,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 4,
              "width": 2,
            },
            "shadowOpacity": 0.48,
            "shadowRadius": 12,
            "width": "95%",
          }
        }
      >
        <
          color="#FF4445"
        />
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-SemiBold",
              "fontSize": 20,
              "fontWeight": "600",
              "marginBottom": 25,
              "marginTop": 15,
              "textAlign": "center",
            }
          }
        >
          ContactDetails.RemoveTitle
        </Text>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 24,
              "textAlign": "left",
            }
          }
        >
          ContactDetails.RemoveContactMessageWarning
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "marginBottom": 24,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 16,
              },
            ]
          }
        >
          ContactDetails.RemoveContactMessageTop
        </Text>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 3,
                "height": 6,
                "marginRight": 12,
                "marginTop": 8,
                "width": 6,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "flex": 1,
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            ContactDetails.RemoveContactsBulletPoint1
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 3,
                "height": 6,
                "marginRight": 12,
                "marginTop": 8,
                "width": 6,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "flex": 1,
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            ContactDetails.RemoveContactsBulletPoint2
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 3,
                "height": 6,
                "marginRight": 12,
                "marginTop": 8,
                "width": 6,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "flex": 1,
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            ContactDetails.RemoveContactsBulletPoint3
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 3,
                "height": 6,
                "marginRight": 12,
                "marginTop": 8,
                "width": 6,
              }
            }
          />
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "flex": 1,
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            ContactDetails.RemoveContactsBulletPoint4
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "marginBottom": 24,
                "textAlign": "left",
              },
              Object {
                "marginTop": 16,
              },
            ]
          }
        >
          ContactDetails.RemoveContactMessageBottom
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "space-between",
              "marginTop": 24,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#FFFFFF",
                "borderRadius": 25,
                "borderWidth": 1.5,
                "flex": 1,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/CancelRemoveButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              CredentialDetails.Back
            </Text>
          </View>
          <View
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FF4445",
                "borderRadius": 25,
                "flex": 2,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
            testID="com.ariesbifold:id/ConfirmRemoveButton"
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              ContactDetails.RemoveContactAction
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
